--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assests/icons/Icon-iPhone-180.png" 
+  image_path: "assets/icons/Icon-iPhone-180.png" 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -55,8 +55,8 @@ flutter:
   assets:
     #  - images/a_dot_burr.jpeg
     #  - images/a_dot_ham.jpeg
-    - assets/
-    - assets/icons
+     - assets/
+     - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
